--- a/API/package.json
+++ b/API/package.json
@@ -4,24 +4,32 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "install": "^0.13.0",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "npm": "^11.3.0",
+    "ts-node": "^10.9.2",
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.13.4"
+    "@types/node": "^22.13.4",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4"
   }
 }
